<resources>
    <string name="app_name">Shop Inventory</string>
    <string name="item_name">Item Name</string>
    <string name="sold">Item sold</string>
    <string name="button_sold">Item sold</string>
    <string name="empty_inventory">There are no products in the store.\n Click on ADD button below to add some.</string>
    <string name="product">Product:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="product_name_hint">Name</string>
    <string name="product_detail_hint">0</string>
    <string name="currency_sign">USD</string>
    <string name="decrease_button">-</string>
    <string name="increase_button">+</string>
    <string name="order_button">Order more</string>
    <string name="order_text">Send an order to supplier</string>
    <string name="email_text_hint">Enter your order message here</string>
    <string name="error_product_name_missing">Product name is required</string>
    <string name="error_product_quantity_missing">Product quantity is required</string>
    <string name="error_product_price_missing">Product price is required</string>
    <string name="error_product_photo_missing">Product photo is required</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_delete_all">Delete all products</string>
    <string name="menu_action_insert_dummy">Insert dummy data</string>
    <string name="editor_activity_new_product">Add a Product</string>
    <string name="editor_activity_edit_product">Edit a Product</string>
    <string name="editor_insert_product_success">Product inserted</string>
    <string name="editor_insert_product_fail">Error inserting product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_success">Product deleted</string>
    <string name="editor_delete_product_fail">Error deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select Image</string>

</resources>
