<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/list_padding">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_item_padding"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="@dimen/list_item_padding"
        android:text="@string/item_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ListItem"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/item_quantity"
            style="@style/ListItem"
            tools:text="75" />

        <Button
            android:id="@+id/sale_button"
            style="@style/ButtonSale"
            android:focusable="false"
            android:onClick="saleButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ListItem"
            android:text="@string/price" />

        <TextView
            android:id="@+id/item_price"
            style="@style/ListItem"
            tools:text="10" />

    </LinearLayout>

</LinearLayout>